style.css
body {
    background-color: black;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'Norse-Bold';
    src:
        local('Norse-Bold'),
        local('Norse-Bold'),
        url('font/Norse-Bold.otf')
        format('opentype')
}

.form-container {
    height: 100vh;

    display: flex;
    align-items: center;


}

.side-hero {
    height: 80vh;
    width: 40vw;
    background-image: url(./images/green-stuff.jpg);
    background-position: center;
    background-repeat: no-repeat;
}

img {
    height: 150px;
}

.form-section {
    height: 80vh;
    width: 60vw;
    background-color: azure;
}

